--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,7 +5,7 @@ body > header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #dc9a20;
+  background-color: #3d7068;
   background-image: url("https://www.transparenttextures.com/patterns/arabesque.png");
 }
 
