--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -16,7 +16,7 @@ html {
 
 body {
   color: #545149;
-  background-color: #f4f1ec;
+  background-color: #43c59e;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
 }
@@ -26,7 +26,7 @@ main {
   font-size: 15px;
   width: 90%;
   flex-direction: column;
-  background-color: #f4f1ec;
+  background-color: #43c59e;
   font-family: sans-serif;
   align-items: center;
   margin-right: auto;
