--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,6 +1,6 @@
 nav {
   height: 120px;
-  background-color: #4056a1;
+  background-color: #14453d;
   color: #FFFFFF;
   padding-left: 1.5em;
   width: 100%;
