Add tweet container with examplanar html and CSS

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -15,7 +15,7 @@
 #tweet-text {
   background-color: #43c59e;
   border: hidden;
-  border-bottom: 3px solid black;
+  border-bottom: 3px solid #53554c;
   margin-bottom: 5px;
 }
 
