--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -51,7 +51,7 @@ textarea {
 
 .error-message-box {
   display: flex;
-  border: 3px solid #14453d;
+  border: none;
   color: #14453d;
   padding: 10px;
   margin-bottom: 15px;
