--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,6 +1,6 @@
 nav {
   height: 120px;
-  background-color: #14453d;
+  background-color: #8ABD91;
   color: #FFFFFF;
   padding-left: 1.5em;
   width: 100%;
